--- a/index.html
+++ b/index.html
@@ -10,9 +10,51 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			
-			<!-- write HTML code neccesary here -->
 
+			<!-- write HTML code neccesary here -->
+			<!-- Level 1 header -->
+			<header>
+				<h1><a href="#">Zetsy</a></h1>
+			</header>
+			<!-- featured image -->
+			<div id="featured-image">
+				<img src="images/necklace.jpg" alt="Necklace">
+			</div>
+
+			<!-- level 2 header -->
+		<div class="main">
+			<h2>About</h2>
+
+			<!-- paragraph -->
+			<p>Mary Wanesia is a jeweler, an Arizona native, and a member of the Navajo tribe. She specializes in creating beautiful, contemporary takes on the traditional adornments worn by the Navajo in ceremonies and in daily life.</p>
+
+			<!-- paragraph -->
+			<p>Jewelry in the Americas has an ancient history. Beginning as far back as 8800 BCE, Paleo-Indians in the American Southwest drilled and shaped multicolored stones and shells into beads and pendants. Olivella shell beads, dating from 6000 BCE, were found in Nevada; bone, antler, and possibly marine shell beads from 7000 BCE were found in Russell Cave in Alabama; copper jewelry was traded from Lake Superior beginning in 3000 BCE; and stone beads were carved in Poverty Point in Louisiana in 1500 BCE. <a href="http://en.wikipedia.org/wiki/Native_American_jewelry">Learn more</a></p>
+			<!-- Note: "Learn more" links to: http://en.wikipedia.org/wiki/Native_American_jewelry -->
+
+			<!-- paragraph -->
+			<p>Mary's jewelry has received recognition and has been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection is sold across the United States and Europe and is carried by the retail stores of Bergdorf Goodman.</p>
+		</div> <!-- end main -->
+			<!-- level 2 header -->
+
+
+		<div class="bottom">
+			<h2>Press</h2>
+			<!-- press images -->
+			<a href="http://nmai.si.edu"><img src="images/nmai-logo.png" alt="Museum Logo"></a>
+			<!-- links to: http://nmai.si.edu -->
+			<a href="http://www.nytimes.com/pages/t-magazine/"><img src="images/times-logo.png" alt="Museum Logo" ></a>
+			<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->
+			<a href="http://www.sedonamonthly.com"><img src="images/sedona-logo.png" alt="Museum Logo" ></a>
+			<!-- links to: http://www.sedonamonthly.com -->
+			<a href="http://www.bergdorfgoodman.com/"><img src="images/bergdorf-logo.png" alt="Museum Logo" ></a>
+			<!-- links to: http://www.bergdorfgoodman.com/ -->
+		</div> <!-- end bottom -->
+
+		<div class="footer">
+			<!-- paragraph -->
+			<p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+		</div> <!-- end footer -->
 		</div><!-- .wrapper -->
 	</body>
 </html>
